# flashsale-backend

./: .gitignore
backend/: .env-template  .env.docker-template  .env.local-template  celery_app.py  ensure_db.py  manage.py  pyproject.toml
backend/app/api/v1/: schema.py
backend/app/api/v1/catalog/: apps.py  models.py  schema.py
backend/app/api/v1/catalog/management/commands/: seed_catalog.py
backend/app/api/v1/catalog/migrations/: 0001_initial.py
backend/app/api/v1/orders/: apps.py  models.py  schema.py
backend/app/api/v1/orders/migrations/: 0001_initial.py
backend/app/api/v1/payments/: apps.py  models.py
backend/app/api/v1/payments/migrations/: 0001_initial.py
backend/app/catalog/: models.py
backend/app/core/: config.py
backend/app/orders/: models.py
backend/app/payments/: models.py
backend/app_project/: asgi.py  settings.py  urls.py  wsgi.py
